--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "GHS Workforce Development",
-    "name": "Gulfport High School Workforce Development",
+    "name": "GHS Workforce Development",
     "icons": [{
             "src": "Branding/192px logo.png",
             "type": "image/png",
